--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundamentos de JavaScript</title>
+    <style>
+        /* Estilo general */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        /* Contenedor de los botones */
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        /* Estilo de los botones */
+        button {
+            background-color: #1100ff;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        /* Efecto hover sobre los botones */
+        button:hover {
+            background-color: #0e00d9;
+        }
+
+        /* Estilo de los formularios */
+        form {
+            display: inline-block;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Fundamentos de JavaScript</h1>
+
+    <div class="button-container">
+        <form action="eightball.html">
+            <button type="submit">Bola mágica</button>
+        </form>
+
+        <form action="prs.html">
+            <button type="submit">Piedra Papel y Tijeras</button>
+        </form>
+    </div>
 </body>
 </html>
