--- a/prs.html
+++ b/prs.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra, Papel y Tijeras</title>
     <style>
         body {
-            margin: 0%;
+            margin: 0;
             padding: 0;
             width: 100vw;
             height: 100vh;
-            display: grid;
-            place-items: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            background-color: #f0f0f0;
         }
 
         .content {
             width: 60%;
-            height: inherit;
+            height: 80%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            align-items: center;
+            background-color: white;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
-        .content {
-            flex-direction: column;
-            justify-content: space-around;
+
+        .row {
+            width: 100%;
             text-align: center;
+            margin-bottom: 20px;
         }
-        .row {width: 100%}
 
-        .users {display: flex;}
+        .users {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+        }
 
-        .users div {width: 50%;}
+        .users div {
+            width: 45%;
+        }
 
         button {
             width: 200px;
@@ -40,11 +53,35 @@
             background-color: blueviolet;
             color: yellow;
             font-weight: bold;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
         }
 
         button:hover {
             background-color: aquamarine;
             color: black;
+        }
+
+        h1, h2, h3 {
+            margin: 10px 0;
+        }
+
+        form {
+            margin-top: 20px;
+        }
+
+        form button {
+            width: auto;
+            padding: 15px 32px;
+            font-size: 16px;
+            border-radius: 5px;
+            background-color: #1100ff;
+            color: white;
+        }
+
+        form button:hover {
+            background-color: #0e00d9;
         }
     </style>
 </head>
@@ -56,19 +93,23 @@
         </div>
         <div class="row users">
             <div id="user">
-                <h2> Usuario </h2>
-                <h3>Eligio: <span></span></h3>
+                <h2>Usuario</h2>
+                <h3>Eligió: <span></span></h3>
             </div>
             <div id="compu">
-                <h2> Computadora</h2>
-                <h3> Eligio: <span></span></h3>
+                <h2>Computadora</h2>
+                <h3>Eligió: <span></span></h3>
             </div>
         </div>
         <div class="row">
             <h1>Resultado!</h1>
         </div>
     </div>
+
+    <form action="index.html">
+        <button type="submit">Inicio</button>
+    </form>
+
     <script src="./prs.js"></script>
 </body>
-
 </html>
